[metadata]
name = aiolifxcloudscenes
version = 1.2022.6.0
author = Owen Johnson
author_email = owen@owenjohnson.info
description = Activate LIFX scenes with async io
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/owen2/aiolifxcloudscenes
project_urls =
    Bug Tracker = https://github.com/owen2/aiolifxcloudscenes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
